// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX fWWLXh"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX fWWLXh"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX fWWLXh"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX fWWLXh"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dsZoQZ"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX dsZoQZ"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
